Implemented local storage to save quiz progress and also implemented countdown timer for quiz

--- a/app/src/main/res/layout/activity_quiz_login.xml
+++ b/app/src/main/res/layout/activity_quiz_login.xml
@@ -5,6 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".QuizLoginActivity">
+    tools:context="hemanth.S3083018.onlinequiz.QuizLoginActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
